# dapcs-oso-plugins

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  dev.sh
contracts/: README.md  common.sh  get_workloads.sh
contracts/backend/: backend.yml.tftpl  certs.tf  terraform.tfvars.template  user_data_backend.tf  variables.tf
contracts/fireblocks/: README.md  create-backend.sh  create-frontend.sh  get_workloads.sh
contracts/fireblocks/backend/: backend.yml.tftpl  certs.tf  terraform.tf  terraform.tfvars.template  user_data_backend.tf  user_data_common.tf  variables.tf
contracts/fireblocks/frontend/: frontend.yml.tftpl  terraform.tfvars.template  user_data_common.tf  user_data_frontend.tf  variables.tf
contracts/frontend/: frontend.yml.tftpl  terraform.tf  terraform.tfvars.template  user_data_frontend.tf
contracts/haven/backend/: terraform.tfvars.template
contracts/haven/frontend/: user_data_common.tf  user_data_frontend.tf  variables.tf
contracts/ibm-digital-asset-haven/: README.md  common.sh  create-backend.sh  create-frontend.sh
contracts/ibm-digital-asset-haven/backend/: backend.yml.tftpl  terraform.tf  terraform.tfvars.template  user_data_backend.tf  user_data_common.tf  variables.tf
contracts/ibm-digital-asset-haven/frontend/: frontend.yml.tftpl  terraform.tf  terraform.tfvars.template  user_data_common.tf  user_data_frontend.tf  variables.tf
contracts/ibm-digital-asset-haven/frontend/frontend/signing-integrity/: .gitignore
contracts/ripple/: README.md  common.sh  create-backend.sh  create-frontend.sh  create-grep11.sh  get_workloads.sh
contracts/ripple/backend/: backend.yml.tftpl  certs.tf  terraform.tf  terraform.tfvars.template  user_data_backend.tf  user_data_common.tf  variables.tf
contracts/ripple/frontend_plugin/: frontend_plugin.yml.tftpl  terraform.tf  terraform.tfvars.template  user_data_common.tf  user_data_frontend_plugin.tf  variables.tf
contracts/ripple/grep11/: certs.tf  grep11-c16.yml.tftpl  terraform.tfvars.template  user_data_grep11.tf  variables.tf
contracts/ripple/output/backend/: .gitignore
fireblocks-plugin/: .gitignore  Containerfile  Makefile  README.md  pyproject.toml  requirements.txt
fireblocks-plugin/src/fb/: customer_server.py  ekmf_views.py  plugin.py  types.py  utils.py
fireblocks-plugin/src/fb/ekmf/: __init__.py  addon_client.py  grep11_client.py  keystore.py  state.py
fireblocks-plugin/src/fb/ekmf/schemas/: __init__.py  oso_document.py  parser.py  simple_exchange.py
fireblocks-plugin/tests/: conftest.py  test_ekmf.py  test_init.py  test_plugin.py  test_types.py
fireblocks-plugin/tests/data/: messages_request.json  signed_doc.json  signed_messages_status_response.json  unsigned_doc.json
fireblocks-utilities/: README.MD  create_signing_key.py  create_validation_key.py  list_signing_key.py  modify_signing_key.py  verifyecdsasignature.py  verifyeddsasignature.py
gateway-mock/: Containerfile  Makefile  pyproject.toml  requirements.txt
gateway-mock/certs/: .gitignore  ca.cnf  client.cnf  gen.sh  server.cnf
gateway-mock/deploy/: entrypoint.sh  nginx.conf  nginx.sh  supervisord-gateway_mock.conf
gateway-mock/src/gateway-mock/: fbserverapimock.py  gateway_mock_server.py
haven-plugin/: Containerfile  Makefile  README.md  pyproject.toml
haven-plugin/src/plugin/: plugin.py
ibm-digital-asset-haven-plugin/: Containerfile  Makefile  README.md  pyproject.toml  requirements.txt
ibm-digital-asset-haven-plugin/src/plugin/: plugin.py
ripple-plugin/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.build.txt  requirements.constraints.txt  requirements.txt  tox.ini
ripple-plugin/src/: setup.py
ripple-plugin/src/app-root/backend_plugin/entrypoints/: entrypoint.sh  supervisord-backend_plugin.conf
ripple-plugin/src/app-root/backend_plugin/nginx/: nginx.conf.template  nginx.sh
ripple-plugin/src/app-root/common/entrypoints/: entrypoint.sh
ripple-plugin/src/app-root/frontend_plugin/entrypoints/: entrypoint.sh  supervisord-frontend_plugin.conf
ripple-plugin/src/app-root/frontend_plugin/nginx/: nginx.conf.template  nginx.sh
ripple-plugin/src/oso_ripple_plugins/: __init__.py
ripple-plugin/src/oso_ripple_plugins/backend_plugin/: backend_plugin_manager.py  backend_plugin_server.py
ripple-plugin/src/oso_ripple_plugins/backend_plugin/api/: v1alpha1.py
ripple-plugin/src/oso_ripple_plugins/backend_plugin/flask_util/: app.py  config.py
ripple-plugin/src/oso_ripple_plugins/common/: crypt.py  errors.py  pre_request.py  utils.py
ripple-plugin/src/oso_ripple_plugins/frontend_plugin/: consts.py  frontend_plugin_manager.py  frontend_plugin_server.py
ripple-plugin/src/oso_ripple_plugins/frontend_plugin/api/: __init__.py  v1alpha1.py
ripple-plugin/src/oso_ripple_plugins/frontend_plugin/flask_util/: __init__.py  app.py  config.py
ripple-plugin/unit-tests/backend_plugin/: conftest.py  test_backend_integration.py
ripple-plugin/unit-tests/common/: certs.py
ripple-plugin/unit-tests/frontend_plugin/: conftest.py  test_frontend_integration.py  test_frontend_manager.py
