[build-system]
requires = [
    "cython >= 3",
    "setuptools",
    "setuptools_scm",
    "wheel",
]
build-backend="setuptools.build_meta"

[project]
dynamic = [ "version" ]
name = "ibm-oso-fireblocks-plugin"
requires-python = ">= 3.11"
dependencies = [
    "requests",
    "cryptography==45.0.5",
    "flask",
    "jsonschema",
    "structlog",
    "werkzeug",
    "pydantic",
    "pydantic-settings",
    "gunicorn>=23.0.0",
    "grpcio==1.73.1",         # DO NOT UPGRADE — kernel panic
    "protobuf==6.31.1",       # DO NOT UPGRADE — kernel panic
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "pre-commit",
    "pip-tools",
    "ruff>=0.9.4",
    "ibm-oso-framework",
]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "requests-mock>=1.12.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
update_changelog_on_bump = true

[tool.ruff]
extend-exclude = ["src/fb/ekmf/generated"]

[tool.ruff.lint]
select = ["E", "F"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.sources]
# TODO: revert to the master branch once the CERTS__CLIENT_CA_EXTRA framework
# change is merged.
ibm-oso-framework = { git = "ssh://git@github.com/IBM/dapcs-oso-framework.git", branch = "ekmf" }
