#
# Licensed Materials - Property of IBM
#
# (c) Copyright IBM Corp. 2024
#
# The source code for this program is not published or otherwise
# divested of its trade secrets, irrespective of what has been
# deposited with the U.S. Copyright Office
#

[project]
name = "ibm-fireblocks-gateway-mock"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "cryptography",
    "flask",
    "jsonschema",
    "structlog",
    "werkzeug",
    "pydantic",
    "pydantic-settings",
    "flask-restx",
    "gunicorn",
    "requests",
    "supervisor",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "pre-commit",
    "pip-tools",
]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

[tool.isort]
profile = "black"
filter_files = true
known_first_party = [
    # "oso-harmonize-plugins",
    "tests.common",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
update_changelog_on_bump = true
