# Copyright (c) 2025 IBM Corp.
# All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-ripple-oso-plugins"
dynamic = ["version"]
requires-python = ">= 3.12"


[project.optional-dependencies]
dependencies = [
    "cryptography",
    "flask",
    "flask-restx",
    "gunicorn",
    "requests",
    "supervisor",
    "urllib3",
]
dev = [
    "docker",
    "packaging",
    "pip-tools",
    "pre-commit",
    "podman",
]
test = [
    "coverage",
    "pip",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
    "requests-toolbelt",
]

[tool.isort]
profile = "black"
filter_files = true
known_first_party = [
    "oso-ripple-plugins",
    "tests.common",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--import-mode=importlib --cov=oso_ripple_plugins --cov-report=xml:/tests/results/coverage.xml --junit-xml=/tests/results/junit.xml"

[oso-internal.tooling.versions]
direnv = "2.34.0"
rust = "1.76.0"
